# franka-teleop-utils

./: .gitignore  CMakeLists.txt  README.md  config_example.yml  requirements.txt
include/: examples_common.h  ioutils.h  memory_outputstream.h  motion_generator.h  teleop_utils.h
messages/: robot-state.capnp
scripts/: Pipfile  calculator.py  convert.py  hug.csv  kplayer.py  mplayer.py  mrecorder.py  player.py  recorder.py
src/: examples_common.cpp  follower.cpp  grasp.cpp  ioutils.cpp  leader.cpp  memory_outputstream.cpp  motion_generator.cpp  publisher.cpp  publisher_subscriber.cpp  receiver.cpp  recorder.cpp  release.cpp  sender.cpp  subscriber.cpp  teleop_utils.cpp
